tests/e2e/semantics/when_return_no_value.error
Error: syntax error in story at line 2, column 5

2|        return 1
          ^^^^^^^^

E0159: Cannot return values from `when` block.
