tests/e2e/semantics/when_return_no_value.story
when http server listen path: "/" as r
    return 1
